--- a/home/templates/blog.html
+++ b/home/templates/blog.html
@@ -83,7 +83,7 @@
     </nav>
     <div class="container mt-4">
         <div class="row mb-2">
-            {% for blog in blog %}
+            {% for blog in object_list %}
                 <div class="row mb-2">
                     <div class="col md-6">
                         <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
