--- a/home/templates/updatepost.html
+++ b/home/templates/updatepost.html
@@ -5,28 +5,12 @@
 <h2>Update BlogPost</h2>
 <div class="container">
   
-    <form method="POST" action='{% url "update_post" queryset.post_id %}'>
+    <form method="POST" action='{% url 'update_post' blog.pk %}' enctype="multipart/form-data">
         {% csrf_token %}
        
-        <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label">Title</label>
-            <input type="text" value="{{queryset.title}}" name="title" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-
-        </div>
-        <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Description</label>
-            <input type="description"  value="{{queryset.description}}" name="description" class="form-control" id="exampleInputPassword1">
-        </div>
-        <input type="hidden" name="user" value="{{request.user}}">
-        {% comment %} <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Slug</label>
-            <input type="text" name="slug" value="{{queryset.slug}}" class="form-control" id="exampleInputPassword1">
-        </div> {% endcomment %}
-        {% comment %} <div class="mb-3">
-            <label for="exampleInputPassword1"  class="form-label">Date:-{{queryset.date_created|date:"Y-m-d"}}</label>
-            <input type="date" name="date_created" value='{{date_created|date:"Y-m-d" }}' class="form-control" id="exampleInputPassword1">
-        </div>
-        {% endcomment %}
+        {{form.as_p}}
+        
+       
 
 
         <button type="submit" class="btn btn-primary">Submit</button>
