--- a/home/templates/blog_post.html
+++ b/home/templates/blog_post.html
@@ -21,7 +21,7 @@
                 <h5>{{blog.date_created}}, Author:{{blog.author.first_name}}</h5>
             </p>
             <h2 class="blog-post-title">{{blog.title}}</h2>
-            <img src="{{blog.thumbnail.url}}" >
+            <img src="{{blog.thumbnail.url}}"style="height:230px;" >
            
 
             <p>
