--- a/home/templates/updatepost.html
+++ b/home/templates/updatepost.html
@@ -4,7 +4,7 @@
 
 <h2>Update BlogPost</h2>
 <div class="container">
-  
+  {% if user.id == blog.author.id %}
     <form method="POST" action='{% url 'update_post' blog.pk %}' enctype="multipart/form-data">
         {% csrf_token %}
        
@@ -15,6 +15,7 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    {% endif %}
 </div>
 
 
